# FtcRobotController

./: .gitignore  eocvsim_workspace.json
FtcRobotController/src/main/: AndroidManifest.xml
TeamCode/: build.gradle
TeamCode/src/main/cpp/: CMakeLists.txt
TeamCode/src/main/cpp/header/: Position.h  track_position.h
TeamCode/src/main/cpp/sources/: Position.cpp  geometricalDrive.cpp  track_position.cpp
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: MatchData.java  Robot.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/control/: DriveToPositionController.java  ErrorDetection.java  FullOnStackDrive.java  LastPositionStorage.java  PIDController.java  PathOptimizer.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/hardware/: Drivetrain.java  Elevator.java  RackAndPinion.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/hardware/i2c/: ColorBeacon.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/hardware/sensor/: DeadWheelOdometry.java  IMU.java  TrackPosition.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/input/: Gamepad.java  GamepadAnalogStick.java  GamepadAnalogSticks.java  GamepadButton.java  GamepadTrigger.java  InputManager.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/math/: Position.java  Vec2d.java  Vec3d.java
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/opmodes/autonomous/: Autonomous.java  AutonomousAdjustableAtInit.java  BlueCloseToBackdrop.java  BlueFarFromBackdrop.java  RedCloseToBackdrop.java  RedFarFromBackdrop.java
(+16 files in other folders)
